--- a/Warehouse/Warehouse/Views/Supplier/Index.cshtml
+++ b/Warehouse/Warehouse/Views/Supplier/Index.cshtml
@@ -20,10 +20,10 @@
                 <td>@item.Name</td>
                 <td>@item.Country</td>
                 <td>@item.City</td>
-                <td>@item.Zip_code</td>
+                <td>@item.ZipCode</td>
                 <td>@item.Address</td>
-                <td>@item.Acc_no</td>
-                <td>@item.Tax_no</td>
+                <td>@item.AccNo</td>
+                <td>@item.TaxNo</td>
             </tr>
         </tbody>
     </table>
