--- a/Warehouse/Warehouse/Views/Product/Index.cshtml
+++ b/Warehouse/Warehouse/Views/Product/Index.cshtml
@@ -5,19 +5,21 @@
 
 <h2>Index</h2>
 
-@foreach (var item in Model.Productlist)
-{
-    <table>
-        
-        <tr>
-            <td>nazwa</td>
-            <td>Vat</td>
-            <td>Cena netto</td>
-            <td>Count</td>
-            <td>Marka</td>
-            <td>Opis</td>
-        </tr>
 
+<table style="width:100%" class="table table-striped">
+
+    <tr>
+        <td>Nazwa</td>
+        <td>Vat</td>
+        <td>Cena netto</td>
+        <td>Liczba</td>
+        <td>Marka</td>
+        <td>Opis</td>
+        <td>Kody</td>
+    </tr>
+
+    @foreach (var item in Model.Productlist)
+    {
         <tbody>
             <tr>
                 <td>@item.Name</td>
@@ -27,16 +29,17 @@
                 <td>@item.SupplierId</td>
                 <td>@item.Description</td>
 
-                
-                <td><img src='@Url.Action("GetBarcode","Product", new { ean = 123})' alt="" /></td>
-                <td><img src='@Url.Action("GetBarcodeEight","Product", new { ean = 123})' alt="" /></td>
-                <td><img src='@Url.Action("GetBarcodeQR","Product", new { ean = 123})' alt="" /></td>
+
+                <td><img src='@Url.Action("GetBarcode", "Product", new { ean = 123 })' alt="" />
+                <img src='@Url.Action("GetBarcodeEight", "Product", new { ean = 123 })' alt="" />
+                <img src='@Url.Action("GetBarcodeQR", "Product", new { ean = 123 })' alt="" /></td>
             </tr>
-            
+
         </tbody>
+    }
     </table>
-}
-    <img src='@Url.Action("GetBarcode","Barcode", new { ean = 123})' alt="" />
+
+   
 
 @Html.ActionLink("Add", "Add", null, new { @class = "btn btn-primary" })
 
