--- a/Warehouse/Warehouse/Views/Supplier/Index.cshtml
+++ b/Warehouse/Warehouse/Views/Supplier/Index.cshtml
@@ -7,38 +7,27 @@
 <h2>Index</h2>
 
 
+@foreach (var item in Model.Supplierslist)
+{
+    <table>
+        <tr>
+            <td>nazwa</td>
+            <td></td>
+        </tr>
 
-
-<table style="width:100%" class="table table-striped">
-    <tr>
-        <td>Nazwa firmy</td>
-        <td>Narodowość</td>
-        <td>Miasto</td>
-        <td>Kod pocztowy</td>
-        <td>Adres</td>
-        <td>Numer konta</td>
-        <td>Podatek</td>
-
-    </tr>
-
-
-    @foreach (var item in Model.Supplierslist)
-    {
         <tbody>
             <tr>
                 <td>@item.Name</td>
                 <td>@item.Country</td>
                 <td>@item.City</td>
-                <td>@item.ZipCode</td>
+                <td>@item.Zip_code</td>
                 <td>@item.Address</td>
-                <td>@item.AccNo</td>
-                <td>@item.TaxNo</td>
+                <td>@item.Acc_no</td>
+                <td>@item.Tax_no</td>
             </tr>
-            
         </tbody>
-    }
     </table>
-
+}
 
 
 @Html.ActionLink("Add", "Add", null, new { @class = "btn btn-primary" })
