--- a/Warehouse/Warehouse/Views/Home/Contact.cshtml
+++ b/Warehouse/Warehouse/Views/Home/Contact.cshtml
@@ -1,17 +1,23 @@
 ﻿@{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "Kontakt";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+
+<div class="col-md-12">
+    <img src="~/Image/logo.png" class="img-fluid. max-width: 100%;" alt="Responsive image">
+</div>
+
+<h2>@ViewBag.Title</h2>
+
+
+
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    Firma z siedzibą w Częstochowie<br />
+    ul. Armi Krajowej 21<br />
+    <abbr title="Phone">Tel: 765 984 125</abbr>
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>E-mail:</strong>   <a href="mailto:ABWmotors@gmail.com">ABWmotors@gmai.com</a><br />
+    <strong>Marketing:</strong> <a href="mailto:ABWmotorsMarketing@gmail.com">ABWmotorMarketing@gmail.com</a>
 </address>
