--- a/Warehouse/Warehouse/Views/Home/About.cshtml
+++ b/Warehouse/Warehouse/Views/Home/About.cshtml
@@ -1,7 +1,13 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "O nas";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<div class="col-md-12">
+    <img src="~/Image/logo.png" class="img-fluid. max-width: 100%;" alt="Responsive image">
+</div>
+
+<h2>@ViewBag.Title</h2>
+
+<br />
+<p>Firma ABW Motors została stworzona przez studentów politechniki Częstochowskiej kierunku informatyka na potrzeby przedmiotu Języki Obsługi
+    Tranzakcji Biznesowych. Firma ma na celu poszerzanie wiedzy teoretycznej jaki i praktycznej w zakresie tworzenia aplikacji internetowych.</p>
