--- a/Warehouse/Warehouse/Views/Home/Index.cshtml
+++ b/Warehouse/Warehouse/Views/Home/Index.cshtml
@@ -1,31 +1,24 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "ABW Motors";
 }
+<div class="col-md-12">
+        <img src="~/Image/logo.png" class="img-fluid. max-width: 100%;" alt="Responsive image">
+    </div>
+<br />
+<br />
+<br />
+    <div class="row">
+        <div class="col-md-6">
+            <h2>Części do aut niemieckich</h2>
+            <p>
+                <img src="~/Image/audi.jpg" class="img-fluid. max-width: 100%;" alt="Responsive image">
+            </p>
+            <p><a class="btn btn-default" href="https://pl.wikipedia.org/wiki/Audi">Learn more &raquo;</a></p>
+        </div>
+        <div class="col-md-6">
+            <h2>Części do aut francuskich</h2>
+            <p></p><img src="~/Image/citroen.jpg" class="img-fluid. max-width: 100%;" alt="Responsive image"></p>
+            <p><a class="btn btn-default" href="https://pl.wikipedia.org/wiki/Citro%C3%ABn">Learn more &raquo;</a></p>
+        </div>
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
-
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
