--- a/Warehouse/Warehouse/Views/Shared/_Layout.cshtml
+++ b/Warehouse/Warehouse/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -12,28 +12,51 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
+
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+               
+                @Html.ActionLink("ABW Motors", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
+
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            Produkty
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Klocki hamulcowe", "Index", "Product")</li>
+                            <li>@Html.ActionLink("Turbiny", "Index", "Product")</li>
+                            <li>@Html.ActionLink("Układ wydechowy", "Index", "Product")</li>
+                            <li>@Html.ActionLink("Skrzynie biegów", "Index", "Product")</li>
+                        </ul>
+                    </li>
+                    <li>@Html.ActionLink("Zamówienia", "Index", "Invoice")</li>
+                    <li>@Html.ActionLink("O nas", "About", "Home")</li>
+                    <li>@Html.ActionLink("Kontakt", "Contact", "Home")</li>
+                    @using (Html.BeginForm("SearchProduct", "Product", FormMethod.Post, new { @class = "navbar-form navbar-left", @role = "search" }))
+                    {
+                        <div class="form-group">
+                    @Html.TextBox("search", (object)null, new { @class = "form-control col-md-3" })
+                        </div>
+                        <button id="search" type="submit" class="btn btn-success">szukaj</button>
+                    }
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
+
     <div class="container body-content">
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - ABW Motors</p>
         </footer>
     </div>
 
